--- a/jdk_8_source/pom.xml
+++ b/jdk_8_source/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>jdk_8_source</artifactId>
 
-
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
