--- a/jdk_8_source/pom.xml
+++ b/jdk_8_source/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.4.0</version>
+        </dependency>
     </dependencies>
 </project>
